tests/ui/associated-type-bounds/return-type-notation/bad-inputs-and-output.stderr
error[E0575]: expected associated type, found associated function `Trait::method`
  --> $DIR/bad-inputs-and-output.rs:28:36
   |
LL | fn foo_qualified<T: Trait>() where <T as Trait>::method(i32): Send {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not a associated type

error[E0575]: expected associated type, found associated function `Trait::method`
  --> $DIR/bad-inputs-and-output.rs:31:36
   |
LL | fn bar_qualified<T: Trait>() where <T as Trait>::method() -> (): Send {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a associated type

error[E0575]: expected associated type, found associated function `Trait::method`
  --> $DIR/bad-inputs-and-output.rs:34:36
   |
LL | fn baz_qualified<T: Trait>() where <T as Trait>::method(): Send {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^ not a associated type

warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-inputs-and-output.rs:3:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: argument types not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:10:23
   |
LL | fn foo<T: Trait<method(i32): Send>>() {}
   |                       ^^^^^ help: remove the input types: `()`

error: return type not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:13:25
   |
LL | fn bar<T: Trait<method() -> (): Send>>() {}
   |                         ^^^^^^ help: remove the return type

error: return type notation arguments must be elided with `..`
  --> $DIR/bad-inputs-and-output.rs:16:23
   |
LL | fn baz<T: Trait<method(): Send>>() {}
   |                       ^^ help: add `..`: `(..)`

error: argument types not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:19:40
   |
LL | fn foo_path<T: Trait>() where T::method(i32): Send {}
   |                                        ^^^^^ help: remove the input types: `()`

error: return type not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:22:42
   |
LL | fn bar_path<T: Trait>() where T::method() -> (): Send {}
   |                                          ^^^^^^ help: remove the return type

error: return type notation arguments must be elided with `..`
  --> $DIR/bad-inputs-and-output.rs:25:40
   |
LL | fn baz_path<T: Trait>() where T::method(): Send {}
   |                                        ^^ help: add `..`: `(..)`

error: aborting due to 9 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0575`.
